--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,3 @@
-@import "bootstrap/dist/css/bootstrap";
+@import "bootstrap/dist/css/bootstrap.css";
 @import 'exchanges';
 @import '_exchanges_box';
