--- a/app/assets/stylesheets/exchanges.scss
+++ b/app/assets/stylesheets/exchanges.scss
@@ -4,11 +4,12 @@
 
 
 body {
-    background: image-url("/background-img.jpg") no-repeat center center fixed;
+    background: image-url("/money_background.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    
   }
   
   .main{
