removing button to submit and submit by click-out source_currency

--- a/app/assets/stylesheets/_exchange_box.scss
+++ b/app/assets/stylesheets/_exchange_box.scss
@@ -59,3 +59,24 @@
       font-size: 20px;
     }
   }
+
+  .refresh {
+    display: inline-block;
+    width: 20px !important;
+    height: 20px !important;
+  }
+  
+  .reload-values {
+    float: right;
+    padding: 2px 2px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: #f9f9f9;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    top: -3px
+  }
