--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class='card-block'>
-      <%= form_tag('/convert', method: :get, id: 'exchange_form') do %>
+      <%= form_tag('/convert',name:'exchange_form', method: :get, id: 'exchange_form') do %>
         <div class='local_currency'>
           <div class='form-group'>
             <p class='title'>Moeda Local</p>
@@ -28,7 +28,29 @@
           </div>
         </div>
         <div>
-          <button type='submit' class='btn btn-primary btn-exchange col-md-12'>CONVERTER</button>
+        
+
+          <script>
+          $('#exchange_form').submit();
+          document.getElementById('exchange_form').submit();
+          #function submitform()
+            #{
+              #document.exchange_form.submit();
+            #}
+            #var a = document.getElementById('amount');
+            #if(document.getElementById('amount').value !== null){
+            #  document.getElementById('exchange_form').submit();
+            #}
+
+            #function validade(){
+            ##  if($('amount').val.length > 0)
+            #}
+          </script>
+        
+          </div>
+        <div>
+        
+          <button type='submit' class='btn btn-primary btn-exchange col-md-12' hidden='hidden'>CONVERTER</button>
         </div>
       <% end %>
     </div>
