removing onclick in button

--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -18,7 +18,7 @@
           </div>
         </div>
         
-        <button type="button" class="btn btn-light center-block" style="width:210px; height:60px; padding-bottom:10px" onclick="ChangeValues">
+        <button type="button" class="btn btn-light center-block" style="width:210px; height:60px; padding-bottom:10px">
           <img src="/change.png" style="height:50px"/>
         </button>
         
